--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,48 +6,20 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id002
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
-    type: trojan
-    server: 104.21.42.52
-    port: 2096
-    udp: true
-    password: RtOGIC4aSC
-    sni: ngo.topoppongroup.space
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: '----------telegram:vpn_xw----------'
-  - &id003
-    name: 🇳🇱_NL_荷兰
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
     type: vmess
-    server: 91.242.229.69
-    port: 2086
+    server: 183.232.170.22
+    port: 30128
     cipher: auto
-    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
+    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: nl1.xv2ray.net
-  - &id004
+    network: tcp
+  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 172.67.221.183
+    server: 104.21.31.244
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -58,11 +30,26 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.blueberrywindow.online
-  - &id005
+        host: www.nahck.site
+  - &id003
+    name: 🇳🇱_NL_荷兰->🇩🇪_DE_德国_1
+    type: vmess
+    server: mci--join.outline-vpn.cloud
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: a.prapt5.ir
+  - &id004
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 104.21.89.252
+    server: www.nahck.site
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -73,19 +60,8 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.crispyrainbow.online
-  - &id006
-    name: 🇩🇪_DE_德国_1
-    type: vmess
-    server: 5.75.190.50
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id007
+        host: www.nahck.site
+  - &id005
     name: 🇺🇸_US_美国_3
     type: vmess
     server: 104.21.23.176
@@ -100,23 +76,56 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id008
+  - &id006
+    name: 🇮🇪_IE_爱尔兰_1
+    type: trojan
+    server: 34.243.78.208
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id007
     name: 🇺🇸_US_美国_4
+    type: trojan
+    server: 89.116.180.179
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
+  - &id008
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: www.crispyrainbow.online
-    port: 8080
+    server: cfcdn1.sanfencdn9.com
+    port: 2086
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 851278d6-8c0b-4147-8939-89cface46627
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /video/Z7qdcrAGRw
       headers:
-        host: www.crispyrainbow.online
+        host: us77SmSk86j.fzbqfrse.xyz
   - &id009
-    name: 🇺🇸_US_美国_5
+    name: 🇩🇪_DE_德国_1
+    type: vmess
+    server: 5.75.190.50
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id010
+    name: 🇺🇸_US_美国_6
     type: vmess
     server: 172.67.212.114
     port: 8080
@@ -130,49 +139,10 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id010
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: au-melbourne-oracle-abfdf2.ip1.shop
-    port: 63503
-    cipher: auto
-    uuid: ed4d8827-4d5a-4c05-a577-c66d6a2fc1e6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
   - &id011
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 183.232.170.22
-    port: 30128
-    cipher: auto
-    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 172.67.217.144
-    port: 80
-    cipher: auto
-    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: lv1.xv2ray.net
-  - &id013
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: 104.21.31.244
+    server: 172.67.166.190
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -183,14 +153,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.nahck.site
-  - &id014
+        host: www.crispyrainbow.online
+  - &id012
     name: 🇺🇸_US_美国_8
     type: vmess
-    server: www.blueberrywindow.online
-    port: 8080
+    server: 104.20.231.30
+    port: 80
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -198,11 +168,26 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.blueberrywindow.online
-  - &id015
+        host: my1.tooters.ir
+  - &id013
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: 104.21.94.99
+    server: server32.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server32.beheshtbaneh.com
+  - &id014
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 104.21.89.252
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -213,21 +198,24 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.blueberrywindow.online
-  - &id016
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
-    type: trojan
-    server: 172.67.157.8
-    port: 2096
-    udp: true
-    password: RtOGIC4aSC
-    sni: ngo.topoppongroup.space
+        host: www.crispyrainbow.online
+  - &id015
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 104.22.51.162
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: '----------telegram:vpn_xw----------'
-  - &id017
-    name: 🇺🇸_US_美国_10
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id016
+    name: 🇺🇸_US_美国_11
     type: vmess
     server: www.crispyrainbow.biz
     port: 8080
@@ -241,8 +229,148 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
+  - &id017
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 116.203.116.244
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
   - &id018
-    name: 🇺🇸_US_美国_11
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: server28.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 2a346c57-5ff4-4e4b-a4d1-f3d008cbe09e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server28.beheshtbaneh.com
+  - &id019
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: server33.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 0873fffc-414f-4140-a155-672129fd9a1d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server33.beheshtbaneh.com
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: vmess
+    server: rl1.269999.xyz
+    port: 27102
+    cipher: auto
+    uuid: 460d53e3-3fa4-456a-83d1-d75d17d87c65
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: rl1.269999.xyz
+  - &id021
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 104.16.57.82
+    port: 2086
+    cipher: auto
+    uuid: 851278d6-8c0b-4147-8939-89cface46627
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/Z7qdcrAGRw
+      headers:
+        host: us77SmSk86j.fzbqfrse.xyz
+  - &id022
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: www.greendam.site
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id023
+    name: 🇮🇪_IE_爱尔兰_2
+    type: trojan
+    server: 52.215.172.18
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: www.crispyrainbow.online
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.online
+  - &id025
+    name: 🇳🇱_NL_荷兰->🇩🇪_DE_德国_2
+    type: vmess
+    server: 188.114.96.11
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: a.prapt5.ir
+  - &id026
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
+    type: trojan
+    server: 104.19.154.92
+    port: 443
+    udp: true
+    password: 8d0de334-c1a0-44ab-9362-e7916c0d268d
+    sni: sshhiddifyc1.cpionline.cc
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /u5ht27KSp8j3Z2QIPbkyFm3I
+      headers:
+        host: sshhiddifyc1.cpionline.cchttp/1.1
+  - &id027
+    name: 🇺🇸_US_美国_16
     type: vmess
     server: 172.67.180.248
     port: 8080
@@ -256,13 +384,13 @@ proxies:
       path: /
       headers:
         host: www.nahck.site
-  - &id019
-    name: 🇺🇸_US_美国_12
+  - &id028
+    name: 🇺🇸_US_美国_17
     type: vmess
-    server: www.nahck.site
-    port: 8080
+    server: server31.beheshtbaneh.com
+    port: 8880
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 4154143c-bbba-47a4-9f79-c2ed087cbcc9
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -270,20 +398,46 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.nahck.site
-  - &id020
-    name: 🇩🇪_DE_德国_2
+        host: server31.beheshtbaneh.com
+  - &id029
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
     type: vmess
-    server: 116.203.116.244
-    port: 3389
+    server: for-irancell.outline-vpn.cloud
+    port: 80
     cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: http
-  - &id021
-    name: 🇺🇸_US_美国_13
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id030
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id031
+    name: 🇨🇳_CN_中国->🇫🇷_FR_法国
+    type: trojan
+    server: 183.232.230.230
+    port: 8443
+    udp: true
+    password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
+    sni: 083ab9ab-s8usg0-0-zzkl.s5.p5pv.com
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇺🇸_US_美国_18
     type: vmess
     server: 104.21.82.183
     port: 8880
@@ -297,6 +451,21 @@ proxies:
       path: /
       headers:
         host: server26.beheshtbaneh.com
+  - &id033
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
+    type: vmess
+    server: 104.24.208.37
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
 proxy-groups:
   - name: PROXY
     type: select
@@ -344,6 +513,18 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -370,6 +551,18 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
   - name: SELECT
     type: select
     proxies:
@@ -394,6 +587,18 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
