--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,7 +6,83 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇦🇺_AU_澳大利亚_1
+    type: vmess
+    server: 20.213.159.7
+    port: 24864
+    cipher: auto
+    uuid: 33963e49-0df5-419a-95b9-e8d7581c1a59
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.qq.com
+  - &id002
     name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 5.161.220.92
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id003
+    name: 🇨🇳_CN_中国->🇫🇷_FR_法国
+    type: trojan
+    server: 183.232.230.230
+    port: 8443
+    udp: true
+    password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
+    sni: 083ab9ab-s8usg0-0-zzkl.s5.p5pv.com
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10838
+    udp: true
+    password: 45ef6416-21dc-40b5-af3c-9962aa85b3ff
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10850
+    udp: true
+    password: 45ef6416-21dc-40b5-af3c-9962aa85b3ff
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10837
+    udp: true
+    password: 45ef6416-21dc-40b5-af3c-9962aa85b3ff
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10847
+    udp: true
+    password: 45ef6416-21dc-40b5-af3c-9962aa85b3ff
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: 104.21.31.244
     port: 8080
@@ -20,98 +96,101 @@ proxies:
       path: /
       headers:
         host: www.nahck.site
-  - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 104.24.208.37
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: www.greendam.site
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: rl1.269999.xyz
-    port: 27102
-    cipher: auto
-    uuid: 460d53e3-3fa4-456a-83d1-d75d17d87c65
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: rl1.269999.xyz
-  - &id005
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 104.20.231.30
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id006
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
-    type: vmess
-    server: for-irancell.outline-vpn.cloud
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id007
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
-    type: vmess
-    server: 104.22.51.162
-    port: 80
-    cipher: auto
-    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: my1.tooters.ir
-  - &id008
+  - &id009
     name: 🇺🇸_US_美国_3
+    type: vmess
+    server: server28.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 2a346c57-5ff4-4e4b-a4d1-f3d008cbe09e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server28.beheshtbaneh.com
+  - &id010
+    name: 🇩🇪_DE_德国_1
+    type: vmess
+    server: 116.203.116.244
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id011
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 20.220.192.220
+    port: 45627
+    cipher: auto
+    uuid: 33609fe4-5965-46cc-9fbc-01b84d4b8dbb
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.alipay.com
+  - &id012
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 172.67.217.144
+    port: 80
+    cipher: auto
+    uuid: 85674552-ce41-44d9-bb2a-50f76450b3d8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: lv1.xv2ray.net
+  - &id013
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vmess
+    server: 162.159.200.3
+    port: 80
+    cipher: auto
+    uuid: b5a75d3a-cd95-4b04-9cd6-b1ef4d9b763c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ca3.visaapp.top
+  - &id014
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: server26.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 5a7021e0-26b4-45d6-b175-fe551601ca97
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server26.beheshtbaneh.com
+  - &id015
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: service.ouluyun9803.com
+    port: 21003
+    password: d6105bbd-be0d-45b2-82ad-31fd1071c1d2
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇺🇸_US_美国_6
     type: vmess
     server: 104.21.82.183
     port: 8880
@@ -125,50 +204,8 @@ proxies:
       path: /
       headers:
         host: server26.beheshtbaneh.com
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2086
-    cipher: auto
-    uuid: 851278d6-8c0b-4147-8939-89cface46627
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/Z7qdcrAGRw
-      headers:
-        host: us77SmSk86j.fzbqfrse.xyz
-  - &id010
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: server33.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 0873fffc-414f-4140-a155-672129fd9a1d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server33.beheshtbaneh.com
-  - &id011
-    name: 🇺🇸_US_美国_6
-    type: trojan
-    server: 89.116.180.179
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: p6us4.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-  - &id012
-    name: 🇩🇪_DE_德国_1
+  - &id017
+    name: 🇩🇪_DE_德国_2
     type: vmess
     server: 5.75.190.50
     port: 3389
@@ -178,19 +215,77 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: http
-  - &id013
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+  - &id018
+    name: 🇦🇱_AL_阿尔巴尼亚
     type: vmess
-    server: 183.232.170.22
-    port: 30128
+    server: 109.104.152.144
+    port: 12300
     cipher: auto
-    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
+    uuid: 4be33771-099d-4d65-9426-09bed47eb41f
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id014
+  - &id019
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 172.111.57.66
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/271624282113
+      headers:
+        host: www.75116565.xyz
+  - &id020
+    name: 🇭🇰_HK_香港->🇳🇱_NL_荷兰
+    type: vmess
+    server: 156.245.8.185
+    port: 41000
+    cipher: auto
+    uuid: d7735058-1dac-4618-99ff-0aa0441ec2d7
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/271624282113
+      headers:
+        host: www.20163322.xyz
+  - &id021
     name: 🇺🇸_US_美国_7
+    type: vmess
+    server: zula.ir
+    port: 8880
+    cipher: auto
+    uuid: 2a346c57-5ff4-4e4b-a4d1-f3d008cbe09e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server28.beheshtbaneh.com
+  - &id022
+    name: 🇬🇧_GB_英国
+    type: vmess
+    server: 89.213.182.230
+    port: 12345
+    cipher: auto
+    uuid: 51c1bc49-35c6-411c-8355-21ee5c6075da
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /免费节点分享TG@WSBVPN美国🇺🇸三网4837
+  - &id023
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 172.67.166.190
     port: 8080
@@ -204,54 +299,14 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id015
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ss
-    server: lg3.dtku41.xyz
-    port: 44672
-    password: dongtaiwang.com
-    cipher: chacha20-ietf-poly1305
-  - &id016
-    name: 🇩🇪_DE_德国_2
-    type: vmess
-    server: 116.203.116.244
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id017
-    name: 🇨🇳_CN_中国->🇫🇷_FR_法国_1
-    type: ss
-    server: yd.qianggewangluo.buzz
-    port: 10815
-    password: 6f35bc86-d226-4dd0-8f4c-708f23077d24
-    cipher: chacha20-ietf-poly1305
-  - &id018
+  - &id024
     name: 🇩🇪_DE_德国_3
     type: ss
     server: 80.92.204.106
     port: 9094
     password: rpgbNnU9rDDU4aWZ
     cipher: aes-256-cfb
-  - &id019
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: www.crispyrainbow.biz
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.crispyrainbow.biz
-  - &id020
+  - &id025
     name: 🇺🇸_US_美国_9
     type: vmess
     server: 104.21.23.176
@@ -266,38 +321,8 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id021
+  - &id026
     name: 🇺🇸_US_美国_10
-    type: vmess
-    server: www.crispyrainbow.online
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.crispyrainbow.online
-  - &id022
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: 104.21.89.252
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.crispyrainbow.online
-  - &id023
-    name: 🇺🇸_US_美国_12
     type: vmess
     server: 172.67.212.114
     port: 8080
@@ -311,7 +336,7 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id024
+  - &id027
     name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
     type: trojan
     server: 172.67.204.84
@@ -323,29 +348,7 @@ proxies:
     network: grpc
     grpc-opts:
       grpc-service-name: 443trojan
-  - &id025
-    name: 🇺🇸_US_美国_13
-    type: vmess
-    server: server32.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: server32.beheshtbaneh.com
-  - &id026
-    name: 🇦🇱_AL_阿尔巴尼亚
-    type: ss
-    server: 109.104.152.144
-    port: 111
-    password: dongtaiwang.com
-    cipher: chacha20-ietf-poly1305
-  - &id027
+  - &id028
     name: 🇳🇱_NL_荷兰->🇩🇪_DE_德国
     type: vmess
     server: mci--join.outline-vpn.cloud
@@ -360,49 +363,8 @@ proxies:
       path: /?ed=2048
       headers:
         host: a.prapt5.ir
-  - &id028
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: 104.16.57.82
-    port: 2086
-    cipher: auto
-    uuid: 851278d6-8c0b-4147-8939-89cface46627
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/Z7qdcrAGRw
-      headers:
-        host: us77SmSk86j.fzbqfrse.xyz
   - &id029
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
-    type: trojan
-    server: 104.19.154.92
-    port: 443
-    udp: true
-    password: 8d0de334-c1a0-44ab-9362-e7916c0d268d
-    sni: sshhiddifyc1.cpionline.cc
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /u5ht27KSp8j3Z2QIPbkyFm3I
-      headers:
-        host: sshhiddifyc1.cpionline.cc
-    alpn:
-      - http/1.1
-  - &id030
-    name: 🇨🇳_CN_中国->🇫🇷_FR_法国_2
-    type: trojan
-    server: 183.232.230.230
-    port: 8443
-    udp: true
-    password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
-    sni: 083ab9ab-s8usg0-0-zzkl.s5.p5pv.com
-    skip-cert-verify: true
-    network: tcp
-  - &id031
-    name: 🇺🇸_US_美国_15
+    name: 🇺🇸_US_美国_11
     type: vmess
     server: server31.beheshtbaneh.com
     port: 8880
@@ -416,6 +378,84 @@ proxies:
       path: /
       headers:
         host: server31.beheshtbaneh.com
+  - &id030
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: server32.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 044ba8ed-7285-472a-bc14-fb91dc6be4c9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server32.beheshtbaneh.com
+  - &id031
+    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
+    type: vmess
+    server: yhnsb3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: yhnsb3.shabijichang.com
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: yhnsb3.shabijichang.com
+  - &id032
+    name: 🇦🇺_AU_澳大利亚_2
+    type: vmess
+    server: au-melbourne-oracle-abfdf2.ip1.shop
+    port: 63503
+    cipher: auto
+    uuid: ed4d8827-4d5a-4c05-a577-c66d6a2fc1e6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: au-melbourne-oracle-abfdf2.ip1.shop
+  - &id033
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10845
+    udp: true
+    password: 45ef6416-21dc-40b5-af3c-9962aa85b3ff
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id034
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10848
+    udp: true
+    password: 45ef6416-21dc-40b5-af3c-9962aa85b3ff
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id035
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: trojan
+    server: 104.19.154.92
+    port: 443
+    udp: true
+    password: 8d0de334-c1a0-44ab-9362-e7916c0d268d
+    sni: sshhiddifyc1.cpionline.cc
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /u5ht27KSp8j3Z2QIPbkyFm3I
 proxy-groups:
   - name: PROXY
     type: select
@@ -473,6 +513,10 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -509,6 +553,10 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
   - name: SELECT
     type: select
     proxies:
@@ -543,6 +591,10 @@ proxy-groups:
       - *id029
       - *id030
       - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
